<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_text"> </string>
    <string name="rcl">RCL</string>
    <string name="sto">STO</string>
    <string name="m_minus">M-</string>
    <string name="shift">SHIFT</string>
    <string name="rad">RAD</string>
    <string name="abs">ABS</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m_plus">M+</string>
    <string name="inverse_sin">sin1</string>
    <string name="inverse_cos">cos1</string>
    <string name="inverse_tan">tan1</string>
    <string name="expo">ex</string>
    <string name="ten_power">10x</string>
    <string name="rnd">rnd</string>
    <string name="sin_sign">sin</string>
    <string name="cos_sign">cos</string>
    <string name="tan_sign">tan</string>
    <string name="natural_log">ln</string>
    <string name="log">log</string>
    <string name="cube_root">3/</string>
    <string name="cube">x3</string>
    <string name="one_over_x">1/x</string>
    <string name="x_power_y">Yx</string>
    <string name="square_root">/</string>
    <string name="x_square">x^2</string>
    <string name="percent">%</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>

    <string name="single_delete">del</string>
    <string name="clear">AC</string>
    <string name="factorial">n!</string>
    <string name="combination">c(n,r)</string>
    <string name="permutation">p(n,r)</string>
    <string name="rate">Rate</string>

    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="pi">ii</string>
    <string name="e">e</string>
    <string name="comma">,</string>

    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="zero_button">0</string>
    <string name="dot">.</string>
    <string name="exp">exp</string>
    <string name="ans">Ans</string>
    <string name="equal_sign">=</string>
    <string name="x_value">x</string>
    <string name="plus_minus">+/-</string>
    <string name="plot">Plot</string>
    <string name="asterisk">*</string>
    <string name="deg">DEG</string>
    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Calculator App</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="history">History</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="scientific_calculator">Scientific Calculator</string>
    <string name="standard_calculator">Standard Calculator</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="equals">=</string>
    <string name="mode">Deg</string>
    <string name="double_zero">00</string>

</resources>
