<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.calculation.ScientificCalculation">

    <EditText
        android:id="@+id/first_edit_text"
        style="@style/DisplayEditTextStyle.Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="end"
        android:inputType="text"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/second_edit_text"
        style="@style/DisplayEditTextStyle.Formula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_edit_text"
        android:gravity="end"
        android:inputType="text"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/second_edit_text"
        android:onClick="onClick"
        android:text="@string/square"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/x_power_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/square"
        android:layout_toEndOf="@+id/square"
        android:layout_toRightOf="@+id/square"
        android:onClick="onClick"
        android:text="@string/xpown"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/x_power_y"
        android:layout_toEndOf="@+id/x_power_y"
        android:layout_toRightOf="@+id/x_power_y"
        android:onClick="onClick"
        android:text="@string/log"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/square"
        android:onClick="onClick"
        android:text="@string/sin"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sin"
        android:layout_alignLeft="@+id/x_power_y"
        android:layout_alignStart="@+id/x_power_y"
        android:onClick="onClick"
        android:text="@string/cos"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/tan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cos"
        android:layout_toEndOf="@+id/cos"
        android:layout_toRightOf="@+id/cos"
        android:onClick="onClick"
        android:text="@string/tan"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sin"
        android:layout_toLeftOf="@+id/cos"
        android:layout_toStartOf="@+id/cos"
        android:checked="false"
        android:onClick="onClick"
        android:text="@string/toggle" />

    <Button
        android:id="@+id/factorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggle"
        android:layout_toEndOf="@+id/toggle"
        android:layout_toRightOf="@+id/toggle"
        android:onClick="onClick"
        android:text="@string/factorial"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/sqrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/factorial"
        android:layout_toEndOf="@+id/factorial"
        android:layout_toRightOf="@+id/factorial"
        android:onClick="onClick"
        android:text="@string/sqrt"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tan"
        android:layout_toEndOf="@+id/log"
        android:layout_toRightOf="@+id/log"
        android:onClick="onClick"
        android:text="@string/clear" />

    <Button
        android:id="@+id/backSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sqrt"
        android:layout_toEndOf="@+id/tan"
        android:layout_toRightOf="@+id/tan"
        android:onClick="onClick"
        android:text="@string/backspace" />

    <Button
        android:id="@+id/pi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sqrt"
        android:layout_alignLeft="@+id/backSpace"
        android:layout_alignStart="@+id/backSpace"
        android:onClick="onClick"
        android:text="@string/pi"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toggle"
        android:onClick="onClick"
        android:text="@string/one" />

    <Button
        android:id="@+id/number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/number_1"
        android:layout_toEndOf="@+id/number_1"
        android:layout_toRightOf="@+id/number_1"
        android:onClick="onClick"
        android:text="@string/two" />

    <Button
        android:id="@+id/number_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/number_2"
        android:layout_toEndOf="@+id/number_2"
        android:layout_toRightOf="@+id/number_2"
        android:onClick="onClick"
        android:text="@string/three" />

    <Button
        android:id="@+id/number_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number_1"
        android:onClick="onClick"
        android:text="@string/four" />

    <Button
        android:id="@+id/number_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/number_4"
        android:layout_alignLeft="@+id/number_2"
        android:layout_alignStart="@+id/number_2"
        android:onClick="onClick"
        android:text="@string/five" />

    <Button
        android:id="@+id/number_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/number_5"
        android:layout_toEndOf="@+id/number_5"
        android:layout_toRightOf="@+id/number_5"
        android:onClick="onClick"
        android:text="@string/six" />

    <Button
        android:id="@+id/number_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number_4"
        android:onClick="onClick"
        android:text="@string/seven" />

    <Button
        android:id="@+id/number_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/number_7"
        android:layout_alignLeft="@+id/number_5"
        android:layout_alignStart="@+id/number_5"
        android:onClick="onClick"
        android:text="@string/eight" />

    <Button
        android:id="@+id/number_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/minus"
        android:layout_alignBottom="@+id/minus"
        android:layout_toEndOf="@+id/number_8"
        android:layout_toRightOf="@+id/number_8"
        android:onClick="onClick"
        android:text="@string/nine" />


    <Button
        android:id="@+id/positive_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/equal"
        android:layout_alignBottom="@+id/equal"
        android:layout_toEndOf="@+id/closeBracket"
        android:layout_toRightOf="@+id/closeBracket"
        android:onClick="onClick"
        android:text="@string/posneg"
        android:textSize="20sp" />

    <Button
        android:id="@+id/number_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_7"
        android:layout_toEndOf="@+id/number_7"
        android:layout_toRightOf="@+id/number_7"
        android:onClick="onClick"
        android:text="@string/zero" />

    <Button
        android:id="@+id/double_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_9"
        android:layout_toEndOf="@+id/number_8"
        android:layout_toRightOf="@+id/number_8"
        android:onClick="onClick"
        android:text="@string/double_zero" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number_9"
        android:onClick="onClick"
        android:text="@string/dot"
        android:textSize="20sp" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/number_6"
        android:layout_toEndOf="@+id/number_3"
        android:layout_toRightOf="@+id/number_3"
        android:onClick="onClick"
        android:text="@string/divide" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/number_3"
        android:layout_alignLeft="@+id/divide"
        android:layout_alignStart="@+id/divide"
        android:onClick="onClick"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/number_6"
        android:layout_toEndOf="@+id/number_6"
        android:layout_toRightOf="@+id/number_6"
        android:onClick="onClick"
        android:text="@string/minus"
        android:textSize="20sp" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/number_6"
        android:layout_alignBottom="@+id/number_6"
        android:layout_toEndOf="@+id/number_3"
        android:layout_toRightOf="@+id/number_3"
        android:onClick="onClick"
        android:text="@string/plus" />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/number_0"
        android:layout_toEndOf="@+id/positive_negative"
        android:layout_toRightOf="@+id/positive_negative"
        android:onClick="onClick"
        android:text="@string/equals" />

    <Button
        android:id="@+id/openBracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/positive_negative"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:text="@string/open_bracket" />

    <Button
        android:id="@+id/closeBracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/openBracket"
        android:layout_alignBottom="@+id/openBracket"
        android:layout_toEndOf="@+id/openBracket"
        android:layout_toRightOf="@+id/openBracket"
        android:onClick="onClick"
        android:text="@string/close_bracket" />

    <Button
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/minus"
        android:layout_toEndOf="@+id/number_9"
        android:layout_toRightOf="@+id/number_9"
        android:onClick="onClick"
        android:text="@string/mode"
        android:textAllCaps="false" />

</RelativeLayout>
